--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,19 @@
 .animate-slideTestimonial {
   animation: slideTestimonial 40s linear infinite;
 }
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+
+.animate-float {
+  animation: float 3s ease-in-out infinite;
+}
 .poppins-thin {
   font-family: "Poppins", serif;
   font-weight: 100;
